--- a/style/sass/_mixin.scss
+++ b/style/sass/_mixin.scss
@@ -9,3 +9,8 @@
   padding-top: $top;
   padding-bottom: $bottom;
 }
+
+@mixin marginTopBottom($top, $bottom) {
+  margin-top: $top;
+  margin-bottom: $bottom;
+}
