--- a/style/sass/_variable.scss
+++ b/style/sass/_variable.scss
@@ -7,7 +7,7 @@ $darkblue: #212D40;
 
 
 %container {
-    width: 90%;
-    max-width: 1200px;
-    margin-inline: auto;
+  display: block;
+	max-width: 85%;
+	margin-inline: auto;
   }
