--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -3,6 +3,7 @@
 @use "mixin" as *;
 @use "card" as *;
 
+/*global*/
 body {
   background-color: $beige;
   font-family: $font-base;
@@ -25,18 +26,207 @@ h2 {
   font-family: $font-hulyia;
 }
 
-/*Navbar*/
+/*bouton*/
+.button__deco {
+  @include marginTopBottom(20px, 20px);
+  border: none;
+  outline: none;
+  display: block;
+  position: relative;
+  font-family: inherit;
+  text-decoration: none;
+  background-color: transparent;
+  transition: color 0.2s ease-in;
 
+  &:hover {
+    color: $gold;
+    cursor: pointer;
+
+    .left-decoration {
+      &:before {
+        transform: translate(3px, 3px);
+      }
+
+      &:after {
+        transform: translate(3px, -3px) rotate(-90deg);
+      }
+    }
+
+    .right-decoration {
+      &:before {
+        transform: translate(-3px, 3px) rotate(90deg);
+      }
+
+      &:after {
+        transform: translate(-3px, -3px) rotate(180deg);
+      }
+    }
+  }
+
+  .button__text {
+    color: $darkblue;
+    margin: 13px;
+    display: block;
+    line-height: 1;
+    font-size: 26px;
+    text-align: center;
+    position: relative;
+    padding: 15px 25px;
+    letter-spacing: 2px;
+    transition: background-color 0.2s ease-in;
+  }
+
+  .left-decoration {
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+    height: 100%;
+    display: block;
+    position: absolute;
+
+    &:before {
+      top: 0;
+      left: 0;
+      content: "";
+      width: 27px;
+      height: 27px;
+      display: block;
+      position: absolute;
+      background: url(https://www.zelda.com/breath-of-the-wild/assets/img/decorations/decorated-button__decoration.svg);
+      transition: transform 0.2s ease-in;
+    }
+
+    &:after {
+      left: 0;
+      bottom: 0;
+      content: "";
+      width: 27px;
+      height: 27px;
+      display: block;
+      position: absolute;
+      transform: rotate(-90deg);
+      background: url(https://www.zelda.com/breath-of-the-wild/assets/img/decorations/decorated-button__decoration.svg);
+      transition: transform 0.2s ease-in;
+    }
+  }
+
+  .right-decoration {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    height: 100%;
+    display: block;
+    position: absolute;
+
+    &:before {
+      top: 0;
+      right: 0;
+      content: "";
+      width: 27px;
+      height: 27px;
+      display: block;
+      position: absolute;
+      transform: rotate(90deg);
+      background: url(https://www.zelda.com/breath-of-the-wild/assets/img/decorations/decorated-button__decoration.svg);
+      transition: transform 0.2s ease-in;
+    }
+
+    &:after {
+      right: 0;
+      bottom: 0;
+      content: "";
+      width: 27px;
+      height: 27px;
+      display: block;
+      position: absolute;
+      transform: rotate(180deg);
+      background: url(https://www.zelda.com/breath-of-the-wild/assets/img/decorations/decorated-button__decoration.svg);
+      transition: transform 0.2s ease-in;
+    }
+  }
+}
+
+/*Navbar*/
+header {
+  background-image: url("../../image/bg-gold.png");
+}
+
+.navbar {
+  @include flexBox(row, space-between, center);
+  @extend %container;
+
+  &__logo img {
+    width: 20%;
+  }
+
+  img {
+    vertical-align: middle;
+  }
+
+  a {
+    font-size: 1.5rem;
+    color: $beige;
+    font-family: $font-hulyia;
+  }
+
+  a:hover {
+    color: $lightblue;
+    text-decoration: underline $lightblue;
+  }
+
+  &__list {
+    @include flexBox(row, flex-end, center);
+    gap: 20px;
+    margin-right: 10%;
+
+    img {
+      width: 20%;
+      transition: transform 0.3s;
+    }
+
+    img:hover {
+      transform: scale(1.2);
+    }
+  }
+}
+
+/*Hero*/
+#hero {
+  @include flexBox(row, center, center);
+  @include paddingTopBottom(5%, 5%);
+  gap: 1.5em;
+  border-top: 20px solid transparent;
+  border-image: url("../../image/runes-top-gold.png") 150 repeat;
+
+  img {
+    width: 100%;
+  }
+}
+
+/*Newsletter*/
 #newsletter {
   @include flexBox(column, center, center);
   @include paddingTopBottom(5%, 5%);
-  @extend %container;
+  border-bottom: solid 20px $gold;
   text-align: center;
 }
 
+.form__input--group {
+  @include flexBox(row, center, center);
+  gap: 10px;
+}
+
+/*Carte interactive*/
 #carteinteractive {
   @include flexBox(column, center, center);
-  @include paddingTopBottom(5%, 5%);
+  @include paddingTopBottom(1%, 1%);
   background-color: $lightblue;
+  text-align: center;
   gap: 1.5em;
+
+  h2 {
+    color: $beige;
+  }
 }
