--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,4 +1,4 @@
-.navbar, .card__box {
+.navbar, .gallery__grid--container, .statistique__container, .recette__text, .recette__card-container, .card__box {
   display: block;
   max-width: 85%;
   margin-inline: auto;
@@ -13,6 +13,11 @@
   padding: 15px 0 15px 0;
   border-top: 50px solid transparent;
   border-image: url("../../image/runes-top-ivory.png") 150 repeat;
+}
+
+.titre {
+  font-family: "The Wild Breath of Zelda", sans-serif;
+  font-size: 1rem;
 }
 
 .card {
@@ -72,6 +77,11 @@ h2 {
   font-family: "Hylia serif";
 }
 
+h3 {
+  font-size: 1.5rem;
+  font-family: "Lexend Deca", sans-serif;
+}
+
 /*bouton*/
 .button__deco {
   margin-top: 20px;
@@ -103,10 +113,11 @@ h2 {
 }
 .button__deco .button__text {
   color: #212D40;
+  font-family: "Hylia serif";
   margin: 13px;
   display: block;
   line-height: 1;
-  font-size: 26px;
+  font-size: 2rem;
   text-align: center;
   position: relative;
   padding: 15px 25px;
@@ -203,7 +214,6 @@ header {
 }
 .navbar a:hover {
   color: #65BC91;
-  text-decoration: underline #65BC91;
 }
 .navbar__list {
   display: flex;
@@ -243,10 +253,14 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  border-bottom: solid 20px #BCA36A;
+  padding-top: 2%;
+  padding-bottom: 2%;
   text-align: center;
+  border-top: 20px solid transparent;
+  border-image: url("../../image/bande_gold.png") 50 repeat;
+}
+#newsletter p {
+  width: 40%;
 }
 
 .form__input--group {
@@ -254,7 +268,7 @@ header {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 50px;
 }
 
 /*Carte interactive*/
@@ -266,9 +280,210 @@ header {
   padding-top: 1%;
   padding-bottom: 1%;
   background-color: #65BC91;
+  border-top: solid 15px #BCA36A;
   text-align: center;
   gap: 1.5em;
 }
-#carteinteractive h2 {
+#carteinteractive h3 {
   color: #F4F4D9;
+}
+
+/*Gallery*/
+#gallery {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-top: solid 15px #65BC91;
+  border-bottom: solid 15px #65BC91;
+}
+
+.gallery__grid--container {
+  margin-top: 2%;
+  margin-bottom: 2%;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 10px;
+  width: 80%;
+}
+.gallery__grid--container img {
+  width: 100%;
+  border: solid 2px #BCA36A;
+}
+
+.img1 {
+  grid-column: 1/3;
+  grid-row: 2/4;
+}
+
+.img2 {
+  grid-column: 3/6;
+  grid-row: 1/3;
+}
+
+.img3 {
+  grid-column: 3/4;
+  grid-row: 3/4;
+}
+
+.img4 {
+  grid-column: 4/7;
+  grid-row: 3/5;
+}
+
+.img5 {
+  grid-column: 6/7;
+  grid-row: 2/3;
+}
+
+.img6 {
+  grid-column: 7/8;
+  grid-row: 2/4;
+}
+
+/*statistique*/
+#statistique {
+  background-color: #ffffff;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.statistique__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 15%;
+}
+
+.statistique__graph {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.statistique__list {
+  align-items: flex-start;
+  font-family: "Hylia serif";
+  font-size: 2rem;
+}
+.statistique__list img {
+  width: 10%;
+  vertical-align: middle;
+}
+
+/*recettes*/
+#recette {
+  padding-top: 2%;
+  padding-bottom: 2%;
+  background-color: #65BC91;
+  border-top: solid 15px #BCA36A;
+  border-bottom: solid 15px #BCA36A;
+}
+
+.recette__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.recette__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  color: #212D40;
+  text-align: center;
+}
+
+.recette__card-container {
+  padding: 2% 0 2% 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-items: center;
+  gap: 1.5em;
+}
+
+.recette__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  margin: 0 10px 0 10px;
+  padding: 0 10px 0 10px;
+  background-color: #ffffff;
+  border: solid 3px #BCA36A;
+  border-radius: 5%;
+  gap: 2%;
+}
+.recette__card img {
+  width: 50%;
+}
+.recette__card--image {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.recette__card--titre {
+  color: #BCA36A;
+}
+.recette__card--titre h3 {
+  font-family: "Hylia serif";
+}
+.recette__card--text {
+  margin-left: 5%;
+}
+.recette__card--text em {
+  font-style: normal;
+  text-decoration: underline;
+  color: #65BC91;
+}
+
+/*Contact*/
+#contact {
+  border-bottom: solid 15px #65BC91;
+}
+
+.contact__map {
+  width: 100%;
+  height: 600px;
+}
+
+.contact__map--container {
+  width: 100%;
+  height: 1000px;
+  position: relative;
+}
+
+.contact__box {
+  padding: 2rem;
+  position: absolute;
+  background-color: #ffffff;
+  border: solid 5px #65BC91;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
+}
+
+.contact__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contact__form .form__label {
+  display: block;
+}
+
+.form__input {
+  margin-top: 1%;
+  margin-bottom: 1%;
+  width: 100%;
+  max-width: 100%;
 }
