--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -26,6 +26,11 @@ h2 {
   font-family: $font-hulyia;
 }
 
+h3 {
+  font-size: 1.5rem;
+  font-family: $font-base;
+}
+
 /*bouton*/
 .button__deco {
   @include marginTopBottom(20px, 20px);
@@ -65,10 +70,11 @@ h2 {
 
   .button__text {
     color: $darkblue;
+    font-family: $font-hulyia;
     margin: 13px;
     display: block;
     line-height: 1;
-    font-size: 26px;
+    font-size: 2rem;
     text-align: center;
     position: relative;
     padding: 15px 25px;
@@ -173,7 +179,6 @@ header {
 
   a:hover {
     color: $lightblue;
-    text-decoration: underline $lightblue;
   }
 
   &__list {
@@ -208,14 +213,20 @@ header {
 /*Newsletter*/
 #newsletter {
   @include flexBox(column, center, center);
-  @include paddingTopBottom(5%, 5%);
-  border-bottom: solid 20px $gold;
+  @include paddingTopBottom(2%, 2%);
+
   text-align: center;
+  border-top: 20px solid transparent;
+  border-image: url("../../image/bande_gold.png") 50 repeat;
+
+  p {
+    width: 40%;
+  }
 }
 
 .form__input--group {
   @include flexBox(row, center, center);
-  gap: 10px;
+  gap: 50px;
 }
 
 /*Carte interactive*/
@@ -223,10 +234,200 @@ header {
   @include flexBox(column, center, center);
   @include paddingTopBottom(1%, 1%);
   background-color: $lightblue;
+  border-top: solid 15px $gold;
   text-align: center;
   gap: 1.5em;
 
-  h2 {
+  h3 {
     color: $beige;
   }
+}
+
+/*Gallery*/
+
+#gallery {
+  @include flexBox(column, center, center);
+  border-top: solid 15px $lightblue;
+  border-bottom: solid 15px $lightblue;
+}
+
+.gallery__grid--container {
+  @extend %container;
+  @include marginTopBottom(2%, 2%);
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+
+  grid-gap: 10px;
+  width: 80%;
+
+  img {
+    width: 100%;
+    border: solid 2px $gold;
+  }
+}
+
+.img1 {
+  grid-column: 1/3;
+  grid-row: 2/4;
+}
+
+.img2 {
+  grid-column: 3/6;
+  grid-row: 1/3;
+}
+
+.img3 {
+  grid-column: 3/4;
+  grid-row: 3/4;
+}
+
+.img4 {
+  grid-column: 4/7;
+  grid-row: 3/5;
+}
+
+.img5 {
+  grid-column: 6/7;
+  grid-row: 2/3;
+}
+
+.img6 {
+  grid-column: 7/8;
+  grid-row: 2/4;
+}
+
+/*statistique*/
+#statistique {
+  background-color: $white;
+  @include paddingTopBottom(2%, 2%);
+}
+
+.statistique__container {
+  @extend %container;
+  @include flexBox(row, center, center);
+  gap: 15%;
+}
+
+.statistique__graph {
+  @include flexBox(column, center, center);
+}
+
+.statistique__list {
+  align-items: flex-start;
+  font-family: $font-hulyia;
+  font-size: 2rem;
+
+  img {
+    width: 10%;
+    vertical-align: middle;
+  }
+}
+
+/*recettes*/
+#recette {
+  @include paddingTopBottom(2%, 2%);
+  background-color: $lightblue;
+  border-top: solid 15px $gold;
+  border-bottom: solid 15px $gold;
+}
+
+.recette__container {
+  @include flexBox(column, center, center);
+}
+
+.recette__text {
+  @include flexBox(column, center, center);
+  @extend %container;
+  width: 60%;
+  color: $darkblue;
+  text-align: center;
+}
+
+.recette__card-container {
+  @extend %container;
+
+  padding: 2% 0 2% 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-items: center;
+  gap: 1.5em;
+}
+.recette__card {
+  @include flexBox(column, center, center);
+  width: 20%;
+  margin: 0 10px 0 10px;
+  padding: 0 10px 0 10px;
+  background-color: $white;
+  border: solid 3px $gold;
+
+  border-radius: 5%;
+  gap: 2%;
+
+  img {
+    width: 50%;
+  }
+
+  &--image {
+    @include flexBox(row, center, center);
+  }
+
+  &--titre {
+    color: $gold;
+    h3 {
+      font-family: $font-hulyia;
+    }
+  }
+
+  &--text {
+    margin-left: 5%;
+    em {
+      font-style: normal;
+      text-decoration: underline;
+      color: $lightblue;
+    }
+  }
+}
+
+/*Contact*/
+
+#contact {
+  border-bottom: solid 15px $lightblue;
+}
+
+.contact__map {
+  width: 100%;
+  height: 600px;
+}
+
+.contact__map--container {
+  width: 100%;
+  height: 1000px;
+  position: relative;
+}
+
+.contact__box {
+  padding: 2rem;
+  position: absolute;
+  background-color: $white;
+  border: solid 5px $lightblue;
+  top: 20px;
+  right: 20px;
+  z-index: 1; 
+}
+
+.contact__form {
+  @include flexBox(column, center, center);
+
+  & .form__label {
+    display: block;
+  }
+}
+
+.form__input {
+  @include marginTopBottom(1%, 1%);
+  width: 100%;
+  max-width: 100%;
+
+
 }
