--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -215,18 +215,13 @@ header {
   @include flexBox(column, center, center);
   @include paddingTopBottom(2%, 2%);
 
-  text-align: center;
   border-top: 20px solid transparent;
   border-image: url("../../image/bande_gold.png") 50 repeat;
 
   p {
+    text-align: center;
     width: 40%;
   }
-}
-
-.form__input--group {
-  @include flexBox(row, center, center);
-  gap: 50px;
 }
 
 /*Carte interactive*/
@@ -402,7 +397,7 @@ header {
 
 .contact__map--container {
   width: 100%;
-  height: 1000px;
+  height: 600px;
   position: relative;
 }
 
@@ -413,7 +408,7 @@ header {
   border: solid 5px $lightblue;
   top: 20px;
   right: 20px;
-  z-index: 1; 
+  z-index: 1;
 }
 
 .contact__form {
@@ -428,6 +423,68 @@ header {
   @include marginTopBottom(1%, 1%);
   width: 100%;
   max-width: 100%;
+}
 
+/*Footer*/
+footer {
+  background-color: $white;
+}
 
+.footer__top {
+  @include flexBox(column, space-between, center);
+  padding: 2% 0 2% 0;
+  border-bottom: solid 15px $gold;
+}
+
+.footer__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+  img {
+    width: 10%;
+  }
+}
+
+.footer__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+}
+
+.footer__list {
+  @include flexBox(row, space-between, center);
+  width: 100%;
+  gap: 15%;
+  font-size: 1.25rem;
+}
+
+.footer__bottom {
+  @include flexBox(row, center, center);
+  width: 100%;
+  padding: 2% 0 2% 0;
+  
+}
+
+.footer__dev {
+@include flexBox(row, center, flex-start);
+width: 33%
+}
+
+.footer__social {
+  width: 33%;
+
+  img {
+    width: 5%;
+  }
+
+}
+
+.footer__contact {
+  @include flexBox(row, center, center);
+  width: 33%;
+  gap: 15%;
+  font-size: 1rem;
 }
