--- a/style/css/style.css
+++ b/style/css/style.css
@@ -255,20 +255,12 @@ header {
   align-items: center;
   padding-top: 2%;
   padding-bottom: 2%;
-  text-align: center;
   border-top: 20px solid transparent;
   border-image: url("../../image/bande_gold.png") 50 repeat;
 }
 #newsletter p {
+  text-align: center;
   width: 40%;
-}
-
-.form__input--group {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
 }
 
 /*Carte interactive*/
@@ -457,7 +449,7 @@ header {
 
 .contact__map--container {
   width: 100%;
-  height: 1000px;
+  height: 600px;
   position: relative;
 }
 
@@ -486,4 +478,79 @@ header {
   margin-bottom: 1%;
   width: 100%;
   max-width: 100%;
+}
+
+/*Footer*/
+footer {
+  background-color: #ffffff;
+}
+
+.footer__top {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2% 0 2% 0;
+  border-bottom: solid 15px #BCA36A;
+}
+
+.footer__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.footer__logo img {
+  width: 10%;
+}
+
+.footer__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  gap: 15%;
+  font-size: 1.25rem;
+}
+
+.footer__bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 2% 0 2% 0;
+}
+
+.footer__dev {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  width: 33%;
+}
+
+.footer__social {
+  width: 33%;
+}
+.footer__social img {
+  width: 5%;
+}
+
+.footer__contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 33%;
+  gap: 15%;
+  font-size: 1rem;
 }
