--- a/style/css/style.css
+++ b/style/css/style.css
@@ -527,6 +527,7 @@ footer {
   justify-content: center;
   align-items: center;
   width: 100%;
+  background-color: #BCA36A;
   padding: 2% 0 2% 0;
 }
 
