--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -464,13 +464,13 @@ footer {
 .footer__bottom {
   @include flexBox(row, center, center);
   width: 100%;
+  background-color: $gold;
   padding: 2% 0 2% 0;
-  
 }
 
 .footer__dev {
-@include flexBox(row, center, flex-start);
-width: 33%
+  @include flexBox(row, center, flex-start);
+  width: 33%;
 }
 
 .footer__social {
@@ -481,7 +481,6 @@ width: 33%
   }
 
 }
-
 .footer__contact {
   @include flexBox(row, center, center);
   width: 33%;
