--- a/style/css/style.css
+++ b/style/css/style.css
@@ -536,14 +536,19 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  width: 33%;
+  width: 40%;
 }
 
 .footer__social {
-  width: 33%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  gap: 15%;
 }
 .footer__social img {
-  width: 5%;
+  width: 25%;
 }
 
 .footer__contact {
@@ -551,7 +556,7 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 33%;
+  width: 40%;
   gap: 15%;
   font-size: 1rem;
 }
